--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <canvas width="1024" height="576"></canvas>
-    <script src="index.ts"></script>
+    <script type="module" src="dist/index.js"></script>
   </body>
 </html>
